Another MONSTER commit
* Added level 5, changed level 4 to level 6, and added a new level 4
* Added piano sound files and made playPitch util (replacing playBell)
* Added a back button and settings button to the level screens
* Fixed Android back button (now goes back to level select)
* Changed all relative imports ("../*") to use absolute imports (eg. "assets/*")
* Added coinPositions for storing arrays of common coin positions
* Changed levels to now use LevelContainer instead of ScreenContainer to compensate for the navbar on top of levels
* Added getDimensions to use instead of the react-native Dimensions
* Misc. housekeeping with the codebase

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,13 +21,12 @@
         "components/*": ["./src/components/*"],
         "hooks/*": ["./src/hooks/*"],
         "screens/*": ["./src/screens/*"],
-        "utils/*": ["./src/utils/*"],
-        "*": [
-          "./src/typings/*"
-        ]
+        "utils/*": ["./src/utils/*"]
+        // ,"*": ["./src/typings/*"]
       }
     },
     "exclude": [
       "node_modules"
     ]
   }
+  
