--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "^0.59.8",
+    "react-native-draggable": "^1.0.21",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-typescript-transformer": "^1.2.13",
     "react-native-web": "^0.11.7",
