--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./src/assets/images/icon.png",
+    "icon": "./src/assets/images/12.png",
     "splash": {
       "image": "./src/assets/images/twelve-padded-title.png",
       "resizeMode": "contain",
@@ -24,7 +24,19 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
-    }
+      "supportsTablet": true,
+      "bundleIdentifier": "com.bradonzhang.twelve",
+      "icon": "./src/assets/images/12.png"
+    },
+    "android": {
+      "package": "com.bradonzhang.twelve",
+      "icon": "./src/assets/images/12-circle.png",
+      "adaptiveIcon": {
+        "foregroundImage": "./src/assets/images/12-circle.png",
+        "backgroundColor": "#00ffff"
+      }
+    },
+    "description": "A puzzle game about collecting twelve dots... with a special twist in each level!",
+    "githubUrl": "https://github.com/BradonZhang/twelve"
   }
 }
