--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
     "@react-native-community/slider": "^2.0.2",
+    "@types/deep-equal": "^1.0.1",
+    "@types/matter-js": "^0.10.3",
     "@types/react-navigation": "^3.0.8",
     "@types/styled-components": "^4.1.19",
+    "deep-equal": "^1.1.0",
     "expo": "^35.0.0",
     "expo-av": "^7.0.1",
+    "expo-linear-gradient": "^7.0.1",
     "global": "^4.4.0",
+    "matter-js": "^0.14.2",
+    "mem": "^5.1.1",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "^0.59.8",
-    "react-native-draggable": "^1.0.21",
+    "react-native-game-engine": "^0.12.3",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-typescript-transformer": "^1.2.13",
     "react-native-web": "^0.11.7",
