--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/deep-equal": "^1.0.1",
     "@types/matter-js": "^0.10.3",
     "@types/react-navigation": "^3.0.8",
+    "@types/react-redux": "^7.1.5",
     "@types/styled-components": "^4.1.19",
     "deep-equal": "^1.1.0",
     "expo": "^35.0.0",
@@ -32,6 +33,8 @@
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.3",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
