--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native": "^0.59.8",
     "react-native-game-engine": "^0.12.3",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-svg": "~9.9.2",
     "react-native-typescript-transformer": "^1.2.13",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
