--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "expo": "^35.0.0",
     "expo-av": "^7.0.1",
     "expo-linear-gradient": "^7.0.1",
+    "expo-sensors": "~7.0.0",
     "global": "^4.4.0",
     "matter-js": "^0.14.2",
     "mem": "^5.1.1",
+    "mobx": "^5.15.0",
+    "mobx-react": "^6.1.4",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "^0.59.8",
