Added 2 new levels, updated coin sounds, revamped animations
* Two new levels: LevelMonths and LevelVolcano!
* Coin sounds updated to a softer electric guitar timbre with major 7th
chords.
* Animations for a lot of old levels are revamped to use translations
instead of positions. Should now appear smoother thanks to
useNativeDriver.
* Binary level coin reveal animations completely changed so that players
can see what they did to solve the level.
* Play button on main menu now navigates to the last level the player
has completed rather than always going to level 1.
* Falling coin animation now present on the first render of the main
menu. Also present on the credits scene when the player completes the
game.
* utils/random.tsx now contains util functions for random events, such
as simulating random integers and Bernoulli (true/false) trials.
* SimonSays numIterations changed from [2, 4, 6] to [2, 4, 5, 1].
* Initialized WIP levels: LevelDodecahedron, LevelScavengerHunt,
LevelDraw12.
* Added a few packages for 3D animations (namely expo-gl, expo-three,
expo-graphics, and THREE.js).

--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "deep-equal": "^1.1.0",
     "expo": "^35.0.0",
     "expo-av": "^7.0.1",
+    "expo-gl": "~7.0.0",
+    "expo-graphics": "^1.1.0",
     "expo-linear-gradient": "^7.0.1",
     "expo-sensors": "~7.0.0",
+    "expo-three": "^5.2.0",
     "global": "^4.4.0",
     "matter-js": "^0.14.2",
     "mem": "^5.1.1",
@@ -39,7 +42,8 @@
     "react-navigation-stack": "^1.9.3",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
-    "styled-components": "^4.4.0"
+    "styled-components": "^4.4.0",
+    "three": "^0.110.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.18",
