--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/styled-components": "^4.1.19",
     "deep-equal": "^1.1.0",
     "expo": "^35.0.0",
+    "expo-ads-admob": "~7.0.0",
     "expo-av": "^7.0.1",
     "expo-gl": "~7.0.0",
     "expo-graphics": "^1.1.0",
