An absolutely MASSIVE commit
Added a ton of levels, some new assets, some new helpers.

I honestly don't remember everything I've done in the past three months, but I don't think there were any drastic structural changes to the code.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,10 +25,12 @@
         "screens/*": ["./src/screens/*"],
         "utils/*": ["./src/utils/*"]
         // ,"*": ["./src/typings/*"]
-      }
+      },
+      "typeRoots": ["./types", "./node_modules/@types"]
     },
     "exclude": [
-      "node_modules"
+      "node_modules",
+      "typings"
     ]
   }
   
