(Hopefully) removed Android nav bar, smoother animations for dodecahedron, and removed console.log

--- a/app.json
+++ b/app.json
@@ -36,6 +36,9 @@
         "backgroundColor": "#00ffff"
       }
     },
+    "androidNavigationBar": {
+      "visible": false
+    },
     "description": "A puzzle game about collecting twelve dots... with a special twist in each level!",
     "githubUrl": "https://github.com/BradonZhang/twelve"
   }
