--- a/package.json
+++ b/package.json
@@ -18,25 +18,26 @@
     "@types/react-redux": "^7.1.5",
     "@types/styled-components": "^4.1.19",
     "deep-equal": "^1.1.0",
-    "expo": "^35.0.0",
-    "expo-ads-admob": "~7.0.0",
-    "expo-av": "^7.0.1",
-    "expo-gl": "~7.0.0",
+    "expo": "^37.0.0",
+    "expo-ads-admob": "~8.1.0",
+    "expo-av": "~8.1.0",
+    "expo-gl": "~8.1.0",
     "expo-graphics": "^1.1.0",
-    "expo-linear-gradient": "^7.0.1",
-    "expo-sensors": "~7.0.0",
+    "expo-linear-gradient": "~8.1.0",
+    "expo-screen-orientation": "~1.0.0",
+    "expo-sensors": "~8.1.0",
     "expo-three": "^5.2.0",
     "global": "^4.4.0",
     "matter-js": "^0.14.2",
     "mem": "^5.1.1",
     "mobx": "^5.15.0",
     "mobx-react": "^6.1.4",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
-    "react-native": "^0.59.8",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
     "react-native-game-engine": "^0.12.3",
-    "react-native-gesture-handler": "~1.3.0",
-    "react-native-svg": "9.9.2",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-svg": "11.0.1",
     "react-native-typescript-transformer": "^1.2.13",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
@@ -48,14 +49,14 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.18",
-    "@types/react": "^16.9.3",
+    "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.1",
-    "@types/react-native": "^0.60.17",
+    "@types/react-native": "^0.60.22",
     "@types/react-test-renderer": "^16.9.0",
-    "babel-preset-expo": "^7.0.0",
+    "babel-preset-expo": "^8.1.0",
     "ts-jest": "^24.1.0",
     "tslint": "^5.20.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.8.3"
   },
   "private": true,
   "lint": "tslint src/**/*.tsx",
