Added Android navigation bar back :(
Encountered an issue where leaving the app and coming back would respawn the navigation bar, leading to less than desirable results for pages that rely on the screen dimensions being consistent.

I added the navigation bar back for now. Hopefully there will be a fix for this in Expo sometime in the future.

--- a/app.json
+++ b/app.json
@@ -36,7 +36,7 @@
       }
     },
     "androidNavigationBar": {
-      "visible": "sticky-immersive"
+      // "visible": "sticky-immersive"
     },
     "description": "A puzzle game about collecting twelve dots... with a special twist in each level!",
     "githubUrl": "https://github.com/BradonZhang/twelve"
