--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,26 @@
         "utils/*": ["./src/utils/*"]
         // ,"*": ["./src/typings/*"]
       },
+      "plugins": [
+        {
+          "name": "typescript-styled-plugin",
+          "lint": {
+            "validProperties": [
+              "shadow-color",
+              "shadow-opacity",
+              "shadow-offset",
+              "shadow-radius",
+              "padding-horizontal",
+              "padding-vertical",
+              "margin-vertical",
+              "margin-horizontal",
+              "tint-color",
+              "aspect-ratio",
+              "elevation"
+            ]
+          }
+        }
+      ],
       "typeRoots": ["./types", "./node_modules/@types"]
     },
     "exclude": [
