Trying out sticky-immersive, started LevelPrismDimensions and LevelOctahedron
sticky-immersive androidNavigationBar
* Bug with Level72 (keyboard causes sticky-immersive to go away)

Misc:
* Optimized two levels with same-position coins (all coins on same position; only need to render one)

--- a/app.json
+++ b/app.json
@@ -35,7 +35,9 @@
         "backgroundColor": "#00ffff"
       }
     },
-    "androidNavigationBar": {},
+    "androidNavigationBar": {
+      "visible": "sticky-immersive"
+    },
     "description": "A puzzle game about collecting twelve dots... with a special twist in each level!",
     "githubUrl": "https://github.com/BradonZhang/twelve"
   }
