--- a/package.json
+++ b/package.json
@@ -10,38 +10,42 @@
     "test": "node node_modules/jest/bin/jest.js"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.6.2",
-    "@react-native-community/slider": "^2.0.2",
+    "@react-native-community/async-storage": "~1.12.0",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/slider": "3.0.3",
     "@types/deep-equal": "^1.0.1",
     "@types/matter-js": "^0.10.3",
     "@types/react-navigation": "^3.0.8",
     "@types/react-redux": "^7.1.5",
     "@types/styled-components": "^4.1.19",
     "deep-equal": "^1.1.0",
-    "expo": "^37.0.0",
-    "expo-ads-admob": "~8.1.0",
-    "expo-av": "~8.1.0",
-    "expo-gl": "~8.1.0",
+    "expo": "^39.0.0",
+    "expo-ads-admob": "~8.3.0",
+    "expo-av": "~8.6.0",
+    "expo-gl": "~9.1.1",
     "expo-graphics": "^1.1.0",
-    "expo-linear-gradient": "~8.1.0",
-    "expo-screen-orientation": "~1.0.0",
-    "expo-sensors": "~8.1.0",
+    "expo-linear-gradient": "~8.3.0",
+    "expo-screen-orientation": "~2.0.0",
+    "expo-sensors": "~9.1.0",
     "expo-three": "^5.2.0",
     "global": "^4.4.0",
     "matter-js": "^0.14.2",
     "mem": "^5.1.1",
     "mobx": "^5.15.0",
     "mobx-react": "^6.1.4",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "0.63.3",
     "react-native-game-engine": "^1.1.1",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-svg": "11.0.1",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
+    "react-native-svg": "12.1.0",
     "react-native-typescript-transformer": "^1.2.13",
-    "react-native-web": "^0.11.7",
+    "react-native-web": "~0.13.7",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^1.9.3",
+    "react-navigation-stack": "^2.10.2",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "styled-components": "^4.4.0",
@@ -49,14 +53,14 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.18",
-    "@types/react": "^16.9.11",
+    "@types/react": "~16.9.35",
     "@types/react-dom": "^16.9.1",
-    "@types/react-native": "^0.60.22",
+    "@types/react-native": "~0.63.2",
     "@types/react-test-renderer": "^16.9.0",
-    "babel-preset-expo": "^8.1.0",
+    "babel-preset-expo": "^8.3.0",
     "ts-jest": "^24.1.0",
     "tslint": "^5.20.0",
-    "typescript": "^3.8.3"
+    "typescript": "~3.9.2"
   },
   "private": true,
   "lint": "tslint src/**/*.tsx",
