--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-gl": "~9.1.1",
     "expo-graphics": "^1.1.0",
     "expo-linear-gradient": "~8.3.0",
+    "expo-screen-capture": "^1.1.1",
     "expo-screen-orientation": "~2.0.0",
     "expo-sensors": "~9.1.0",
     "expo-three": "^5.2.0",
