--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-community/slider": "3.0.3",
+    "@react-native-community/slider": "^3.0.3",
     "@types/deep-equal": "^1.0.1",
     "@types/matter-js": "^0.10.3",
     "@types/react-navigation": "^3.0.8",
