--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/slider": "^3.0.3",
     "@types/deep-equal": "^1.0.1",
     "@types/matter-js": "^0.10.3",
+    "@types/node": "^14.14.10",
     "@types/react-navigation": "^3.0.8",
     "@types/react-redux": "^7.1.5",
     "@types/styled-components": "^4.1.19",
