--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,7 +47,10 @@
           }
         }
       ],
-      "typeRoots": ["./types", "./node_modules/@types"]
+      "typeRoots": ["./types", "./node_modules/@types"],
+      "types": [
+        "node"
+      ]
     },
     "exclude": [
       "node_modules",
