--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo": "^39.0.0",
     "expo-ads-admob": "~8.3.0",
     "expo-av": "~8.6.0",
+    "expo-constants": "~9.2.0",
     "expo-gl": "~9.1.1",
     "expo-graphics": "^1.1.0",
     "expo-linear-gradient": "~8.3.0",
