--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "name": "src",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject",
     "test": "node node_modules/jest/bin/jest.js"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.13.2",
-    "@react-native-community/async-storage": "~1.12.0",
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-community/slider": "^3.0.3",
+    "@babel/core": "^7.16.0",
+    "@babel/runtime": "^7.16.3",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/slider": "3.0.3",
     "deep-equal": "^1.1.0",
-    "expo": "^39.0.0",
-    "expo-ads-admob": "~8.3.0",
-    "expo-av": "~8.6.0",
-    "expo-constants": "~9.2.0",
-    "expo-gl": "~9.1.1",
-    "expo-linear-gradient": "~8.3.0",
-    "expo-screen-orientation": "~2.0.0",
-    "expo-sensors": "~9.1.0",
+    "expo": "^42.0.0",
+    "expo-ads-admob": "~10.1.2",
+    "expo-app-loading": "1.1.2",
+    "expo-av": "~9.2.3",
+    "expo-constants": "~11.0.1",
+    "expo-gl": "~10.4.2",
+    "expo-linear-gradient": "~9.2.0",
+    "expo-screen-orientation": "~3.3.0",
+    "expo-sensors": "~10.2.2",
     "expo-three": "^5.2.0",
     "global": "^4.4.0",
     "matter-js": "^0.14.2",
@@ -31,21 +32,25 @@
     "mobx-react": "^6.1.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "0.63.3",
+    "react-native": "~0.63.4",
     "react-native-game-engine": "^1.1.1",
-    "react-native-gesture-handler": "~1.7.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
-    "react-native-svg": "12.1.0",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
+    "react-native-svg": "12.1.1",
     "react-native-typescript-transformer": "^1.2.13",
-    "react-native-web": "~0.13.7",
+    "react-native-web": "~0.13.12",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.10.2",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "styled-components": "^4.4.0",
-    "three": "^0.110.0"
+    "three": "^0.110.0",
+    "expo-splash-screen": "~0.11.2",
+    "expo-status-bar": "~1.0.4",
+    "expo-updates": "~0.8.1",
+    "react-native-unimodules": "0.14.10"
   },
   "devDependencies": {
     "@types/deep-equal": "^1.0.1",
@@ -53,16 +58,17 @@
     "@types/matter-js": "^0.10.3",
     "@types/node": "^14.14.10",
     "@types/react": "~16.9.35",
-    "@types/react-dom": "^16.9.1",
+    "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
     "@types/react-navigation": "^3.0.8",
     "@types/react-redux": "^7.1.5",
     "@types/react-test-renderer": "^16.9.0",
     "@types/styled-components": "^4.1.19",
-    "babel-preset-expo": "^8.3.0",
+    "babel-preset-expo": "8.3.0",
     "ts-jest": "^24.1.0",
     "tslint": "^5.20.0",
-    "typescript": "~3.9.2"
+    "typescript": "~4.0.0",
+    "@babel/core": "^7.9.0"
   },
   "private": true,
   "lint": "tslint src/**/*.tsx",
@@ -75,5 +81,6 @@
   "watchAndRunIOS": "concurrently \"yarn run watch\" \"yarn run ios\"",
   "buildRunIOS": "yarn run build && yarn run watchAndRunIOS ",
   "watchAndStart": "concurrently \"yarn run watch\" \"yarn run start\"",
-  "buildAndStart": "yarn run build && yarn run watchAndStart "
+  "buildAndStart": "yarn run build && yarn run watchAndStart ",
+  "version": "1.0.0"
 }
