--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,60 +1,76 @@
 {
-    "compilerOptions": {
-      "allowJs": false,
-      "resolveJsonModule": true,
-      "allowSyntheticDefaultImports": true,
-      "noFallthroughCasesInSwitch": true,
-      "experimentalDecorators": true,
-      "esModuleInterop": true,
-      "isolatedModules": false,
-      "jsx": "react-native",
-      "lib": [
-        "es6",
-        "es2019"
+  "compilerOptions": {
+    "allowJs": false,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "noFallthroughCasesInSwitch": true,
+    "experimentalDecorators": true,
+    "esModuleInterop": true,
+    "isolatedModules": false,
+    "jsx": "react-native",
+    "lib": [
+      "es6",
+      "es2019"
+    ],
+    "moduleResolution": "node",
+    "noEmit": true,
+    "strict": true,
+    "target": "esnext",
+    "baseUrl": "./",
+    "paths": {
+      "assets/*": [
+        "./src/assets/*"
       ],
-      "moduleResolution": "node",
-      "noEmit": true,
-      "strict": true,
-      "target": "esnext",
-      "baseUrl": "./",
-      "paths": {
-        "assets/*": ["./src/assets/*"],
-        "components/*": ["./src/components/*"],
-        "hooks/*": ["./src/hooks/*"],
-        "reducers/*": ["./src/reducers/*"],
-        "res/*": ["./src/res/*"],
-        "screens/*": ["./src/screens/*"],
-        "utils/*": ["./src/utils/*"]
-        // ,"*": ["./src/typings/*"]
-      },
-      "plugins": [
-        {
-          "name": "ts-styled-plugin",
-          "lint": {
-            "validProperties": [
-              "shadow-color",
-              "shadow-opacity",
-              "shadow-offset",
-              "shadow-radius",
-              "padding-horizontal",
-              "padding-vertical",
-              "margin-vertical",
-              "margin-horizontal",
-              "tint-color",
-              "aspect-ratio",
-              "elevation"
-            ]
-          }
-        }
+      "components/*": [
+        "./src/components/*"
       ],
-      "typeRoots": ["./types", "./node_modules/@types"],
-      "types": [
-        "node"
+      "hooks/*": [
+        "./src/hooks/*"
+      ],
+      "reducers/*": [
+        "./src/reducers/*"
+      ],
+      "res/*": [
+        "./src/res/*"
+      ],
+      "screens/*": [
+        "./src/screens/*"
+      ],
+      "utils/*": [
+        "./src/utils/*"
       ]
     },
-    "exclude": [
-      "node_modules",
-      "typings"
+    "plugins": [
+      {
+        "name": "ts-styled-plugin",
+        "lint": {
+          "validProperties": [
+            "shadow-color",
+            "shadow-opacity",
+            "shadow-offset",
+            "shadow-radius",
+            "padding-horizontal",
+            "padding-vertical",
+            "margin-vertical",
+            "margin-horizontal",
+            "tint-color",
+            "aspect-ratio",
+            "elevation"
+          ]
+        }
+      }
+    ],
+    "typeRoots": [
+      "./types",
+      "./node_modules/@types"
+    ],
+    "types": [
+      "node"
     ]
-  }
-  
+  },
+  "exclude": [
+    "node_modules",
+    "typings"
+  ],
+  "extends": "expo/tsconfig.base"
+}
