Impove appearance on iPhones with notches, add app review prompt at end, fix Android visual glitches

--- a/package.json
+++ b/package.json
@@ -20,11 +20,17 @@
     "expo-app-loading": "1.1.2",
     "expo-av": "~9.2.3",
     "expo-constants": "~11.0.1",
+    "expo-device": "~3.3.0",
     "expo-gl": "~10.4.2",
     "expo-linear-gradient": "~9.2.0",
+    "expo-linking": "~2.3.1",
     "expo-screen-orientation": "~3.3.0",
     "expo-sensors": "~10.2.2",
+    "expo-splash-screen": "~0.11.2",
+    "expo-status-bar": "~1.0.4",
+    "expo-store-review": "~4.1.0",
     "expo-three": "^5.2.0",
+    "expo-updates": "~0.8.1",
     "global": "^4.4.0",
     "matter-js": "^0.14.2",
     "mem": "^5.1.1",
@@ -40,19 +46,17 @@
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
     "react-native-typescript-transformer": "^1.2.13",
+    "react-native-unimodules": "0.14.10",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.10.2",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "styled-components": "^4.4.0",
-    "three": "^0.110.0",
-    "expo-splash-screen": "~0.11.2",
-    "expo-status-bar": "~1.0.4",
-    "expo-updates": "~0.8.1",
-    "react-native-unimodules": "0.14.10"
+    "three": "^0.110.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.0",
     "@types/deep-equal": "^1.0.1",
     "@types/jest": "^24.0.18",
     "@types/matter-js": "^0.10.3",
@@ -67,8 +71,7 @@
     "babel-preset-expo": "8.3.0",
     "ts-jest": "^24.1.0",
     "tslint": "^5.20.0",
-    "typescript": "~4.0.0",
-    "@babel/core": "^7.9.0"
+    "typescript": "~4.0.0"
   },
   "private": true,
   "lint": "tslint src/**/*.tsx",
