--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
       "ios",
       "android"
     ],
-    "version": "1.0.5",
+    "version": "1.0.6",
     "orientation": "portrait",
     "icon": "./src/assets/images/12.png",
     "splash": {
@@ -24,8 +24,9 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "buildNumber": "1.0.5",
+      "buildNumber": "1.0.6",
       "bundleIdentifier": "com.bradonzhang.twelve",
+      "appStoreUrl": "https://apps.apple.com/us/app/twelve-a-puzzle-game/id1545782494",
       "icon": "./src/assets/images/12.png",
       "config": {
         "googleMobileAdsAppId": "ca-app-pub-5600114350279556~5091572592"
@@ -33,7 +34,8 @@
     },
     "android": {
       "package": "com.bradonzhang.twelve",
-      "versionCode": 4,
+      "versionCode": 5,
+      "playStoreUrl": "https://play.google.com/store/apps/details?id=com.bradonzhang.twelve",
       "icon": "./src/assets/images/12-circle.png",
       "permissions": [],
       "adaptiveIcon": {
