--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~50.0.14",
-    "expo-app-loading": "^2.1.1",
     "expo-av": "~13.10.5",
     "expo-constants": "~15.4.5",
     "expo-device": "~5.9.3",
     "expo-linear-gradient": "~12.7.2",
     "expo-screen-orientation": "~6.4.1",
     "expo-sensors": "~12.9.1",
+    "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-store-review": "~6.8.3",
     "matter-js": "^0.14.2",
