--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "twelve-v2",
-    "slug": "twelve-v2",
-    "version": "1.0.0",
+    "name": "twelve",
+    "slug": "twelve",
+    "version": "2.0.0",
     "orientation": "portrait",
     "icon": "./src/assets/images/12.png",
     "userInterfaceStyle": "light",
@@ -14,14 +14,14 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "buildNumber": "1.0.8",
+      "buildNumber": "2.0.0",
       "bundleIdentifier": "com.bradonzhang.twelve",
       "appStoreUrl": "https://apps.apple.com/us/app/twelve-a-puzzle-game/id1545782494",
       "icon": "./src/assets/images/12.png"
     },
     "android": {
       "package": "com.bradonzhang.twelve",
-      "versionCode": 7,
+      "versionCode": 8,
       "playStoreUrl": "https://play.google.com/store/apps/details?id=com.bradonzhang.twelve",
       "icon": "./src/assets/images/12-circle.png",
       "permissions": [],
