--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-constants": "~15.4.5",
     "expo-device": "~5.9.3",
     "expo-linear-gradient": "~12.7.2",
+    "expo-navigation-bar": "~2.8.1",
     "expo-screen-orientation": "~6.4.1",
     "expo-sensors": "~12.9.1",
     "expo-splash-screen": "~0.26.4",
