--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-av": "~13.10.5",
     "expo-constants": "~15.4.5",
     "expo-device": "~5.9.3",
+    "expo-gl": "~13.6.0",
     "expo-linear-gradient": "~12.7.2",
     "expo-navigation-bar": "~2.8.1",
     "expo-screen-orientation": "~6.4.1",
@@ -24,6 +25,7 @@
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-store-review": "~6.8.3",
+    "expo-three": "^7.0.0",
     "matter-js": "^0.14.2",
     "mobx": "^6.12.0",
     "mobx-react": "^9.1.0",
@@ -36,12 +38,14 @@
     "react-native-svg": "~14.1.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "three": "^0.162.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/matter-js": "^0.14.2",
     "@types/react": "~18.2.45",
+    "@types/three": "^0.162.0",
     "typescript": "^5.1.3"
   },
   "private": true
