--- a/package.json
+++ b/package.json
@@ -9,33 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "~1.21.0",
-    "@react-native-community/slider": "~4.4.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/slider": "4.5.2",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "~50.0.14",
-    "expo-av": "~13.10.5",
-    "expo-constants": "~15.4.5",
-    "expo-device": "~5.9.3",
-    "expo-gl": "~13.6.0",
-    "expo-linear-gradient": "~12.7.2",
-    "expo-navigation-bar": "~2.8.1",
-    "expo-screen-orientation": "~6.4.1",
-    "expo-sensors": "~12.9.1",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
-    "expo-store-review": "~6.8.3",
+    "expo": "51",
+    "expo-av": "~14.0.7",
+    "expo-constants": "~16.0.2",
+    "expo-device": "~6.0.2",
+    "expo-gl": "~14.0.2",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-navigation-bar": "~3.0.7",
+    "expo-screen-orientation": "~7.0.5",
+    "expo-sensors": "~13.0.9",
+    "expo-splash-screen": "~0.27.6",
+    "expo-status-bar": "~1.12.1",
+    "expo-store-review": "~7.0.2",
     "expo-three": "^7.0.0",
+    "expo-updates": "~0.25.26",
     "matter-js": "^0.14.2",
     "mobx": "^6.12.0",
     "mobx-react": "^9.1.0",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.5",
     "react-native-game-engine": "^1.2.0",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-safe-area-context": "~4.8.2",
-    "react-native-screens": "^3.29.0",
-    "react-native-svg": "~14.1.0",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "styled-components": "^6.1.8",
@@ -44,9 +45,9 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/matter-js": "^0.14.2",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.2.79",
     "@types/three": "^0.162.0",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
